[package]
name = "ystudio-zero"
version = "0.9.2"
edition = "2021"

[dependencies]
clap = { version="4.0.8", features=["derive"]}
eframe = "0.29.1"
egui = "0.29.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
serialport="4"
csv = "1.1"
# egui-plotter = "0.3.0"
egui_plot = "0.29.0"
mpsc = { version = "0.2.3", features = ["vecdeque"] }
egui_file = "0.19.0"
log = "0.4.20"
spectrum-analyzer = "1.5.0"
biquad = "0.4.2"
egui_logger = "0.6.0"
# strum = "0.25.0"
